fixed status bar at top, and text alignment in second box

--- a/third/styles.css
+++ b/third/styles.css
@@ -8,6 +8,21 @@ body {
   height: 100%;
 }
 
+.status-bar {
+  background-color: #d8d8d8;
+  position: relative;
+  height: 125px;
+}
+
+.status-menu {
+  background-color: #4a90e2;
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  left: 35px;
+  top: 10px;
+}
+
 .wrapper {
   min-height: 100%;
   display: -webkit-box;
@@ -30,23 +45,22 @@ div[class*="box"] {
   flex: 1;
 }
 
-.box1 {
-  background-color: #d8d8d8;
-  position: relative;
-  max-height: 100px;
-  min-height: 100px;
+.box2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.inner-text {
+  width: 90%;
 }
 
-.inner-div {
-  width: 80px;
-  height: 80%;
-  position: absolute;
-  top: 10px;
-  left: 20px;
-  background-color: #4a90e2;
+.inner-text p {
+  font-family: sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 1.4;
 }
-
-.box2 {}
 
 .box3 {
   background-color: #4a90e2;
